<resources>
    <string name="app_name">BTTF: Currency Exchange</string>
    <string name="action_settings">Settings</string>

    <string-array name="years">
        <item>1941</item>
        <item>1955</item>
        <item>1985</item>
        <item>2015</item>
    </string-array>

    <string-array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="months_deposit">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string-array name="time_types">
        <item>destination time</item>
        <item>present time</item>
        <item>last time departed</item>
    </string-array>

    <string-array name="purse_currency_names">
        <item>Рубль Императорской России</item>
        <item>Советский рубль</item>
        <item>Российский рубль</item>
        <item>Доллар США</item>
        <item>Фунт стерлингов</item>
    </string-array>

    <string-array name="interests_names">
        <item>7%</item>
        <item>10%</item>
        <item>12%</item>
        <item>13.5%</item>
        <item>16%</item>
        <item>22%</item>
    </string-array>

    <string-array name="deposit_currencies_names_before_1998">
        <item>Доллар США</item>
        <item>Фунт стерлингов</item>
    </string-array>

    <string-array name="deposit_currencies_names_after_1998">
        <item>Доллар США</item>
        <item>Фунт стерлингов</item>
        <item>Рубль</item>
    </string-array>

    <string-array name="resources_names">
        <item>Плутоний</item>
        <item>Топливо</item>
    </string-array>

    <string name="plutonium_title">Плутоний</string>
    <string name="fuel_title">Топливо</string>
    <string name="add_resources_description">Добавить:</string>
    <string name="resources_all_cash">Сбережения:</string>

    <string name="activity_main_my_deposits">Мои вклады</string>
    <string name="activity_main_my_purse">Мои сбережения</string>
    <string name="activity_main_button_exchange">Обменять</string>
    <string name="activity_main_button_travel">Переместиться</string>

    <string name="deposit_add_text">Добавить вклад</string>
    <string name="deposit_currency_text">Выберите валюту</string>
    <string name="deposit_interest_text">Процентная ставка:</string>
    <string name="deposit_item_initial_time">Вклад создан</string>
    <string name="deposit_item_initial_value">Первоначальный взнос:</string>
    <string name="deposit_item_current_value">Состояние вклада:</string>
    <string name="deposit_item_income">Доход по вкладу:</string>
    <string name="deposit_button_add_text">создать вклад</string>

    <string name="deposit_insert_name_text">Введите название</string>
    <string name="deposit_insert_name_action_text">Ввести</string>

    <string name="plutonium_count">Плутоний:</string>
    <string name="fuel_count">Топливо:</string>

    <string name="plutonium_measure">ед.</string>
    <string name="fuel_measure">мл</string>

    <string name="dialog_choose_currency_title">Выберите валюту</string>
    <string name="dialog_choose_currency_positive">Ок</string>
    <string name="dialog_choose_currency_negative">Отмена</string>
    <string name="fragment_change_button_text">обменять валюту</string>

    <string name="currency_dollars">Доллары США</string>
    <string name="currency_rubles">Рубли</string>
    <string name="currency_pounds">Фунты стерлингов</string>

    <string name="destination_panel_name">destination time</string>
    <string name="present_panel_name">present time</string>
    <string name="last_departure_panel_name">last time departed</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="BTTFCurrencyExchange">BTTF: Currency Exchange</string>
    <string name="new_game">New Game</string>
    <string name="_continue">Continue</string>
    <string name="_options">Options</string>
    <string name="_exit">Exit</string>
    <string name="about">About</string>

    <string name="resources_price">Сумма:</string>

    <!--  Уровни -->
    <string name="dialog_level_up_title_text">Уровень</string>
    <string name="message_level_1">Накопите сто тысяч рублей!</string>
    <string name="message_level_2">Поздравляем, Ваш капитал превышает 100 000 рублей. Желаем удачи!</string>
    <string name="message_level_3">Грандиозно! Вы миллионер! Желаем дальнейших успехов!</string>
    <string name="message_win">Это триумф! Вы стали миллиардером!</string>
    <string name="dialog_start_new_game">Новая игра</string>
    <!--  Теперь можете самостоятельно распоряжаться своими деньгами. -->
    <string name="title_lose">Вы проиграли!</string>
    <string name="message_lose_plutonium">У Вас нет возможности пополнить запасы плутония и перемещаться во времени.</string>
    <string name="message_lose_fuel">У Вас нет возможности докупить бензин и разогнать DeLorean до 88 миль в час.</string>
    <string name="dialog_continue_button_text">Продолжить</string>
    <string name="dialog_lose_main_menu_button_text">Главное меню</string>

    <string name="dialog_confirm_exit_title">Подтвердите выход</string>
    <string name="dialog_confirm_exit_message">Вы действительно хотите выйти?</string>
    <string name="dialog_confirm_exit_positive_button">В меню</string>
    <string name="dialog_confirm_exit_negative_button">Отмена</string>


    <string name="game_description">Предыстория.\n
Марти Макфлай возвращается назад в будущее из далекого 1885 года, покидая городок Хилл-Вэлли времен Дикого Запада и оставляя своего друга, доктора Эммета Брауна, влюбленного в учительницу Клару Клейтон, и попадает в свой 1985, оказавшись на железнодорожных рельсах и успев выпрыгнуть из машины времени DeLorean DMC-12, которую потом переехало поездом вдребезги. Подойдя к обломкам машины, чтобы посмотреть, что от нее осталось, он говорит: «Что ж, док, она уничтожена, как ты и хотел…». Его не покидала мысль о том купленном спортивном альманахе, который мог бы принести ему доход, если б док не выбросил его в 2015 в мусорный бак и не начались потом разворачиваться странные события, когда наши герои вернулись обратно в 1985. Но, вспомнив, что, это была его вина, и не купив этот чертов альманах, ничего бы не произошло, он начал думать о том, как можно срубить деньжат другим способом, используя машину времени и не создавая опасных ситуаций, путешествуя во времени… Спустя некоторое время Марти со своей возлюбленной Дженнифер Паркер приезжают посмотреть на то место, где была уничтожена машина. Достав из песка остаток от спаленной фотографии, сделанной 5 сентября 1885 года, на которой изображен Эммет Браун, стоящий возле больших часов, возлюбленные услышали предупреждающий сигнал о приближении поезда и увидели, как начали закрываться два шлагбаума. И вдруг внезапно они отлетели в сторону от примчавшегося поезда времени, созданным доктором Брауном и работающем на пару. Из открывшихся дверей показался Эммет, его жена Клара и двое детей: Жуль и Верн. Марти был рад видеть своего друга. Ученый привез ему сувенир, в котором оказалась фотография от 05.09.1885 с надписью «Марти, спутнику во времени», иллюстрирующая их возле часов. Поблагодарив дока, юноша спросил о возможности вернуть машину времени Delorean DMC-12, чтобы осуществить свою мечту о заработке, путешествуя во времени. Он сказал, что нашел другой безопасный и надежный способ зарабатывания денег, который основывался на обмене валют. Д. Браун, взглянув на него с недоумением и немного подумав, ответил ему: «Хорошо, садитесь в поезд, да пристегнитесь, мы летим обратно в 1885 год, на Дикий Запад, на то место, где ты спрятал машину…». «Подожди, док, а как мы вернемся оттуда назад в будущее? Бензобак же будет пробит стрелами, а плутония с бензином тогда вообще не было!» - спросил Марти. На что другой ответил: «Не переживайте, у меня как раз собой в коробке есть 5 штук плутония и ящик инструментов для ремонта бензобака и несколько литров бензина…». Сев в летающий поезд, все отправились назад в прошлое. Наконец после перемещения Д. Браун починил Delorean, заправил ее бензином и 1 шт плутония и положил остальные внутрь салона. Все попрощались, док пожелал Марти удачи и молодые возлюбленные переместились в Ваше время.\n\n

Цель игры:\n
Играя в роли Марти, накопить 1 миллиард рублей, путешествуя во времени и обменивая разные доступные валюты между собой, основываясь на нестабильности курса.\n\n

Описание игры:\n
Действие начинает развиваться в Вашем времени, а у персонажа изначально есть только одна тысяча долларов, 5 контейнеров с плутонием и 5 литров бензина. Для того чтобы иметь возможность перемещаться во времени, необходимо докупать плутоний с бензином. Диапазон времени для перемещения ограничен 1900 и 2045 годами. Имеется возможность открывать вклады в банке под разные процентные ставки с 1900 года в долларах и фунтах. С 1 января 1998 года можно создавать вклады в рублях.</string>
    <!--  Максимально доступное количество вкладов для открытия: три, один на каждый вид валюты. -->

</resources>
