<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.tixon.backtothefutureexchange.MainMenu">

    <ImageView
        android:id="@+id/iv_name"
        android:src="@drawable/bttf_name"
        android:adjustViewBounds="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_name_margin_top" />

    <LinearLayout
        android:layout_below="@+id/iv_name"
        android:layout_above="@+id/iv_car"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_game"
            android:layout_marginTop="@dimen/tv_menu_margin_vertical"
            android:layout_marginBottom="@dimen/tv_menu_margin_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_menu_color"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/continue_"
            android:layout_marginTop="@dimen/tv_menu_margin_vertical"
            android:layout_marginBottom="@dimen/tv_menu_margin_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_continue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_menu_color"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/options_"
            android:layout_marginTop="@dimen/tv_menu_margin_vertical"
            android:layout_marginBottom="@dimen/tv_menu_margin_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_options"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_menu_color"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_marginTop="@dimen/tv_menu_margin_vertical"
            android:layout_marginBottom="@dimen/tv_menu_margin_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_menu_color"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/exit_"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_exit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_menu_color"
            android:textSize="35sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_car"
        android:src="@drawable/bttf_car"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
