<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panel_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="#A9A9A9"
        android:orientation="horizontal"
        android:padding="4dp">
        <!--TextView
            android:id="@+id/main_activity_tv_year"
            tools:text="2015"
            android:layout_centerVertical="true"
            android:background="@drawable/et_background"
            android:textSize="@dimen/et_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/et_padding"
            android:textColor="@color/green"
            android:maxLength="4"
            android:ems="3"
            android:maxEms="3"/-->

        <!--TextView
            android:id="@+id/main_activity_tv_money"
            tools:text="$1000.00"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/et_background"
            android:textSize="@dimen/et_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/et_padding"
            android:textColor="@color/green" /-->

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_toolbar_plutonium"
                android:src="@drawable/plutonium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:scaleType="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_toolbar_plutonium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_toolbar_plutonium"
                android:layout_toRightOf="@+id/iv_toolbar_plutonium"
                android:text="Плутоний"
                android:textColor="@color/black_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_toolbar_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:scaleType="center"
                android:src="@drawable/fuel"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_toolbar_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_toolbar_fuel"
                android:layout_toRightOf="@+id/iv_toolbar_fuel"
                android:text="Топливо"
                android:textColor="@color/black_color" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/main_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/main_buttons_layout"
                android:layout_alignParentTop="true">

                <!--include layout="@layout/main_content"/-->

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.tixon.backtothefutureexchange.ui.ControlPanelItem
                        android:id="@+id/main_activity_present_panel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <!--include layout="@layout/purse_header_layout"/-->

                    <TextView
                        android:textColor="@color/black_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#A9A9A9"
                        android:gravity="center_horizontal"
                        android:text="@string/activity_main_my_purse" />

                    <include layout="@layout/divider" />

                    <include layout="@layout/purse_items_layout" />

                    <TextView
                        android:textColor="@color/black_color"
                        android:background="#A9A9A9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/activity_main_my_deposits" />

                    <include layout="@layout/divider" />

                    <include layout="@layout/deposits_recycler_layout" />

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/main_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <Button
                    android:id="@+id/main_activity_button_exchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/activity_main_button_exchange" />

                <Button
                    android:id="@+id/main_activity_button_travel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/activity_main_button_travel" />

            </LinearLayout>
        </RelativeLayout>

    </FrameLayout>
</LinearLayout>